--- a/css/styles.css
+++ b/css/styles.css
@@ -64,21 +64,6 @@ nav ul li:active {
   display: none;
 }
 
-.imglink{
-  position: relative;
-}
-
-.imglink p{
-  background-color: #ccc;
-  position: absolute;
-  bottom: 100px;
-  left: 20px;
-  padding: 10px;
-  width: 270px;
-  font-size: 20px;
- 
-}
-
 .services {
   text-align: center;
   width: 100%;
@@ -124,7 +109,7 @@ nav ul li:active {
   left: 100px;
   font-size: 35px;
   font-weight: bold;
-  background-color: #ccc;
+  background-color: rgba(204, 204, 204, 0.7);
   padding: 20px;
   text-align: justify;
 }
@@ -143,6 +128,7 @@ nav ul li:active {
 .buttonlink {
   color: #fff;
   background-color: #0f83db;
+  border: 1px solid #0f83db;
   display: block;
   border-radius: 8px;
   padding: 10px 15px;
@@ -151,25 +137,41 @@ nav ul li:active {
 }
 
 .buttonlink:hover {
-    background-color: #0000ff;
+  background: transparent;
+  color: #0f83db;
 }
 
 .categories {
-   display: flex;
-   flex-wrap: nowrap;
-   margin: 0 70px 30px 60px;
-   align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0 70px 30px 60px;
+  align-items: center;
 }
 
 .categories img {
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   border-radius: 10px;
-   margin: 0 20px 20px 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin: 0 20px 20px 20px;
 }
 
 .categories p {
-   text-align: center;
-   color: #343434;
+  text-align: center;
+  color: #343434;
+}
+
+.imglink{
+  position: relative;
+}
+
+.imglink p{
+  background-color: rgb(204, 204, 204);
+  position: absolute;
+  bottom: 100px;
+  left: 120px;
+  padding: 10px;
+  width: 100px;
+  font-size: 16px;
+ 
 }
 
 /*About*/
@@ -181,46 +183,47 @@ nav ul li:active {
   .about h1 {
     margin-bottom: 10px;
   }
-.about p {
-   text-align: justify;
-   font-size: 20px;
-   margin: 0 20px;
-   line-height: 2.0em;
-   padding: 0 30px 30px;
-}
+  .about p {
+    text-align: justify;
+    font-size: 20px;
+    margin: 0 20px;
+    line-height: 2.0em;
+    padding: 0 30px 30px;
+  }
 /*Contact Us*/
-.contact {
-   border-radius: 5px;
-   padding: 10px;
-   margin: 10px 0;
-}
+  .contact {
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+  }
 
-.row {
-   height: 630px;
-}
-.Addresscol {
-  width: 40%;
-  background-color: #047bd6;
-  padding: 50px;
-  margin-top: 6px;
-  float: left;
-  text-align: center;
-  height: 100%;
-}
+  .row {
+    height: 630px;
+  }
+  
+ .Addresscol {
+    width: 40%;
+    background-color: #047bd6;
+    padding: 50px;
+    margin-top: 6px;
+    float: left;
+    text-align: center;
+    height: 100%;
+  }
 
-.Formcol {
-   width: 60%;
-   float: left;
-   padding: 30px;
-   margin-top: 6px;
-   background-color: #f2f2f2;
-   height: 100%;
-}
+  .Formcol {
+    width: 60%;
+    float: left;
+    padding: 30px;
+    margin-top: 6px;
+    background-color: #f2f2f2;
+    height: 100%;
+  }
 
-.Formcol h4 {
+  .Formcol h4 {
     font-size: 22px;
     padding: 10px 0;
-}
+  }
 
 input[type=text],
 input[type=email],
@@ -248,6 +251,7 @@ label {
    padding: 1em 1.5em;
    border-radius: 10px;
    background-color: #047bd6;
+   border: 1px solid #047bd6;
    color: #ffffff;
    display: block;
    font-size: 16px;
@@ -256,13 +260,14 @@ label {
 }
 
 .contactbtn:hover {
-    background-color: #0000ff;
+    background: transparent;
+    color: #046bd6;
 }
 
 .row::after {
-   content:"";
-   display: table;
-   clear: both;
+  content:"";
+  display: table;
+  clear: both;
 }
 
 /*Shop*/
@@ -319,20 +324,48 @@ h2 {
     line-height: 1;
     padding: 3px 7px;
     text-align: center;
-    vertical-align: top;
+    vertical-align: text-top;
     white-space: nowrap;
   }
   
   /*shopping cart*/
-  
+  .shopping-cart-overlay{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s linear;
+    background: rgb(4, 123, 214, 0.5);
+    z-index: 2;
+    visibility: hidden;
+  }
   .shopping-cart {
-    margin: 80px auto;
-    padding: 0 20px;
-    background: #FFFFFF;
+    position: fixed;
+    top: 0;
+    right:0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    z-index: 3;
+    padding: 1.5rem;
+    transition:all 0.3s linear;
+   transform: translateX(100%);
+    background: rgb(231, 226, 221);
     box-shadow: 1px 2px 3px 0 rgba(0,0,0,0.10);
-    border-radius: 6px;
-    display: flex;
-    flex-direction: column;
+  }
+  
+  .showCart{
+    transform: translateX(0);
+  }
+  
+  .closeCart{
+    font-size: 1.7rem;
+    cursor: pointer;
+  }
+  
+  .transparentBcg{
+    visibility: visible;
   }
   
   .title {
@@ -424,7 +457,7 @@ h2 {
   
   .cartquantityinput {
     height: 34px;
-    width: 50px;
+    width: 35px;
     border-radius: 5px;
     border: 1px solid #56CCF2;
     background-color: #eee;
@@ -466,73 +499,106 @@ h2 {
     margin: 40px auto 80px auto;
     font-size: 28px;
   }
-/*Checkout*/
-.wrapper {
-  background-color: #e8e8e8;
-  display: flex;
-  justify-content: center;
-}
+  /* Patterns*/
+  .patterns {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+  }
+  
+  .patterns div {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 400px;
+    margin: 0 10px 20px 10px;
+  }
+  
+  .patterns div img {
+    float: left;
+    margin: 10px;
+  }
+  
+  .patterns div p {
+    padding: 15px;
+  }
+  
+  .banner {
+    width: 100vw;
+    height: auto;
+  }
+  
+  .pattern-container{
+    padding: 10px;
+    margin: 15px;
+    font-size: 20px;
+  }
+  
+  /*Checkout*/
+ .wrapper {
+    background-color: #e8e8e8;
+    display: flex;
+    justify-content: center;
+  }
 
-.wrapper a {
-   margin: 10px 0;
-   color: #fff;
-}
+  .wrapper a {
+    margin: 10px 0;
+    color: #fff;
+  }
 
-.checkout {
+  .checkout {
     color: #ffffff;
     background-color: #047bd6;
     margin: 5%;
     width: 80%;
     padding: 20px 80px;
-}
-.checkout h3 {
-   font-size: 26px;
-   padding: 10px 0;
-   text-align: center; 
-}
+  }
+  .checkout h3 {
+    font-size: 26px;
+    padding: 10px 0;
+    text-align: center; 
+  }
 
-/*patterns*/
+  /*Footer*/
+  footer {
+    background-color: #343434;
+    color: #fff;
+  }
 
-/*Footer*/
-footer {
-  background-color: #343434;
-  color: #fff;
-}
+  /*footer headings*/
+  .links > h4,
+  .info > h4,
+  .social > h4,
+  .address > h4 {
+    font-weight: bold;
+    margin: 10px 0;
+    font-size: 24px;
+    color: #fff;
+  }
 
-/*footer headings*/
-.links > h4,
-.info > h4,
-.social > h4,
-.address > h4 {
-  font-weight: bold;
-  margin: 10px 0;
-  font-size: 24px;
-  color: #fff;
-}
+  .links a,
+  .info p,
+  .address p {
+    padding: 10px 0;
+  }
 
-.links a,
-.info p,
-.address p {
-  padding: 10px 0;
-}
+  Address {
+    font-style: normal;
+ }
 
-Address {
-   font-style: normal;
-}
+  .links a {
+    font-size: 18px;
+    display: block;
+    color: #ccc;
+  }
 
-.links a {
-  font-size: 18px;
-  display: block;
-  color: #ccc;
-}
-
-.info p,
-.address p {
-  color: #ccc;
-  font-size: 18px;
+  .info p,
+  .address p {
+    color: #ccc;
+    font-size: 18px;
 }
 
-.social a {
+  .social a {
   font-size: 30px;
   color: #fff;
   display: inline-block;
@@ -575,8 +641,9 @@ footer .address {
     width: 100%;
     height: calc(60% - 70px);
     flex-direction: column;
+    justify-content: space-around;
     transition: all 400ms;
-    z-index: 3;
+    z-index: 5;
  }
  
   nav ul li {
@@ -620,6 +687,11 @@ footer .address {
 .Formcol {
   width: 100%;
 }
+.cart{
+  width: 30vw;
+  max-width: 450px;
+}
+
 
 footer {
   clear: both;
