--- a/css/styles.css
+++ b/css/styles.css
@@ -614,7 +614,8 @@ h2 {
 .copyright {
   background-color: #232323;
   color: #fff;
-  padding: 10px 0;
+  padding: 10px;
+  margin: 0 auto;
   text-align: center;
 }
 
