--- a/css/styles.css
+++ b/css/styles.css
@@ -131,9 +131,9 @@ nav ul li:active {
   border: 1px solid #0f83db;
   display: block;
   border-radius: 8px;
-  padding: 10px 15px;
+  padding: 10px;
   text-align: center;
-  font-size: 2.0em;
+  font-size: 1.5em;
 }
 
 .buttonlink:hover {
@@ -144,11 +144,12 @@ nav ul li:active {
 .categories {
   display: flex;
   flex-wrap: nowrap;
-  margin: 20px auto;
+  margin: 10px auto;
   align-items: center;
 }
 
 .categories img {
+  width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   margin: 0 20px 20px 20px;
